log/build_2024-09-13_14-33-29/leg_dector/stderr.log
  File "/home/airlab/Downloads/LiDAR_HumanFollowing-master/install/leg_dector/lib/python3.8/site-packages/leg_dector/go_back.py", line 38
    self.map_data = None
    ^
SyntaxError: invalid syntax

